Revision history for SPVM
0.9514_01  2022-05-02
        * Add cloneable_clone to Point class.
        * Point class has Cloneable interface.
        * Interface can have interface guarantees

        [NON BACKWORD COMPATIBLE CHANGES]
        * Revert 0.9514 Methods of interfaces must have the names.
        * implement statement is renamed to interface statement.
        * A interface type must have one required method.
        * A callback type must have one required method.
        * A class must have the required methods defined in the interface classes.
        * Remove callback_t. The feature of callback_t is merged into interface_t.
        * Remove SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_CALLBACK
        * Change ID of SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_ANY_OBJECT from 10 to 9
0.9514  2022-05-02
        [CHANGE]
        * Add no_compiler_api to SPVM::Builder::Config::Exe
        * Add no_precompile to SPVM::Builder::Config::Exe
        * Add dynamic_lib to SPVM::Builder::Config::Exe
        * Add static_lib to SPVM::Builder::Config::Exe
        * Improve resource system. Don't use ar command.
        * Add to_string method to Point class.
        * Point class has Stringable interface.
        * Add the following Native API constant values of basic type ids.
          0  SPVM_NATIVE_C_BASIC_TYPE_ID_UNKNOWN
          1  SPVM_NATIVE_C_BASIC_TYPE_ID_UNDEF
          2  SPVM_NATIVE_C_BASIC_TYPE_ID_VOID
          3  SPVM_NATIVE_C_BASIC_TYPE_ID_BYTE
          4  SPVM_NATIVE_C_BASIC_TYPE_ID_SHORT
          5  SPVM_NATIVE_C_BASIC_TYPE_ID_INT
          6  SPVM_NATIVE_C_BASIC_TYPE_ID_LONG
          7  SPVM_NATIVE_C_BASIC_TYPE_ID_FLOAT
          8  SPVM_NATIVE_C_BASIC_TYPE_ID_DOUBLE
          9  SPVM_NATIVE_C_BASIC_TYPE_ID_STRING
          10 SPVM_NATIVE_C_BASIC_TYPE_ID_ANY_OBJECT
          11 SPVM_NATIVE_C_BASIC_TYPE_ID_BYTE_OBJECT
          12 SPVM_NATIVE_C_BASIC_TYPE_ID_SHORT_OBJECT
          13 SPVM_NATIVE_C_BASIC_TYPE_ID_INT_OBJECT